--- a/locales/help_docs/zh-CN.yml
+++ b/locales/help_docs/zh-CN.yml
@@ -751,8 +751,8 @@ jv:
         内容修改：
         %{modified_items}
 
-        **注意**：结果基于 %{h} 小时 %{m} 分钟 %{s} 秒前的信息推算，可能与实际信息不符
-        您可以使用 `jv update` 从上游获得最新的信息。
+        结构信息来自 %{h} 小时 %{m} 分钟 %{s} 秒前的更新
+        使用 `jv update` 从上游更新
 
       created_item: |
         +   创建：      %{path}
