Add workspace root directory validation for sheet commands
- Add new error message for non-root directory execution
- Validate current directory in sheet use/exit commands
- Add directory correction helper for other commands
- Return Result from jv_sheet_exit to handle validation failures

--- a/locales/help_docs/en.yml
+++ b/locales/help_docs/en.yml
@@ -517,6 +517,8 @@ jv:
       current_dir_name: Failed to get current directory name
       set_current_dir: Failed to set current directory to %{dir}
 
+    not_root_dir: This command needs to be execute in the workspace root directory!
+
     move:
       rename_failed: |
         **Warning**: Failed to move local file `%{from}` to `%{to}`: %{error}
