--- a/locales/help_docs/zh-CN.yml
+++ b/locales/help_docs/zh-CN.yml
@@ -830,6 +830,7 @@ jv:
         **提示**：使用 `jv track` 追踪您的变更
 
       no_changes: |
+        所在表 %{sheet_name}，状态基于 %{h} 小时 %{m} 分钟 %{s} 秒前
         您的工作区与上游保持同步，可基于该状态进行结构、内容的编辑！
 
       created_item: |
